# name: TestAnonymous.test_get_and_create
  <class 'dict'> {
    'authentication': None,
    'created_at': <class 'datetime'>,
    'id': <class 'str'>,
    'ip': '1.1.1.1',
    'reset': None,
  }
---
# name: TestAuthenticated.test_get_and_create[snapshot]
  <class 'dict'> {
    'authentication': <class 'dict'> {
      'user_id': 'user_id',
    },
    'created_at': <class 'datetime'>,
    'id': <class 'str'>,
    'ip': '1.1.1.1',
    'reset': None,
  }
---
# name: TestReset.test_create_and_get
  <class 'dict'> {
    'authentication': None,
    'created_at': <class 'datetime'>,
    'id': <class 'str'>,
    'ip': '1.1.1.1',
    'reset': <class 'dict'> {
      'remember': True,
      'user_id': 'bf1b993c',
    },
  }
---
